# usekeeper

./: .gitignore  AUTHORS  COPYING  ChangeLog  Dockerfile  Makefile.am  NEWS  README  README.maintainer  README.md  cloudbuild.yaml  configure.ac  initialize  start  sys.config.in  usekeeper.component.yaml  usekeeper.rel.in
.github/workflows/: autotools.yaml
doc/: Makefile.am  component.graffle  overview.edoc-in  supervision.edoc
ebin/: Makefile.am  usekeeper.app-in
include/: Makefile.am  usage.hrl
priv/www/: Makefile.am  index.html  manifest.json  package.json.in  polymer.json
priv/www/src/: style-element.js  usekeeper-help.js  usekeeper-help.js-in  usekeeper-icons.js  usekeeper-shell.js  usekeeper-spec-add.js  usekeeper-spec-list.js  usekeeper-spec-update.js  usekeeper-usage-list.js  usekeeper-user-add.js  usekeeper-user-list.js
src/: mod_usekeeper_rest_accepted_content.erl  mod_usekeeper_rest_delete.erl  mod_usekeeper_rest_get.erl  mod_usekeeper_rest_patch.erl  mod_usekeeper_rest_post.erl  usekeeper.erl  usekeeper_app.erl  usekeeper_log.erl  usekeeper_rest.erl  usekeeper_rest_pagination_server.erl  usekeeper_rest_pagination_sup.erl  usekeeper_rest_res_usage.erl  usekeeper_rest_res_usage_specification.erl  usekeeper_rest_res_user.erl  usekeeper_rest_usage_specification.erl  usekeeper_server.erl  usekeeper_sup.erl
test/: Makefile.am  sys.config-in  test.spec  usekeeper_api_SUITE.erl  usekeeper_log_SUITE.erl  usekeeper_rest_SUITE.erl  usekeeper_test_lib.erl
